# 2021-spring-cs160-team-vega

./: .gitignore  README.md  package-lock.json  package.json
cypress/integration/: README.md  UI_tests.js
docker/: Dockerfile  docker-compose.yaml  start.sh
ecomm_crawler/: Cargo.toml  results.json
ecomm_crawler/src/: lib.rs  main.rs
postman/: README.md  Vega.postman_collection.json
src/: .gitignore  package-lock.json  package.json
src/appserver/: package-lock.json  package.json  server.js
src/appserver/ecomm_crawler/: Cargo.toml
src/appserver/ecomm_crawler/src/: main.rs
src/cypress/integration/: UI_tests.js
src/databases/: test_mongo_connection.js
src/databases/mysql_test/: mysqlconnection.js
src/my-app/: package-lock.json  package.json
src/my-app/public/: index.html
src/my-app/src/: .SearchPage.js.swp  App.js  Header.js  Routes.js  SearchBar.js  SearchPage.js  accessToken.js  index.js
src/my-app/src/Components/: Header.js  ProductCard.js  SortBy.js
src/my-app/src/ProductListing/: ProdInfoImg.js  ProdInfoItem.js  ProductInfoContainer.js
src/server/: .env  .gitignore  ormconfig.json  package-lock.json  package.json  tsconfig.json
src/server/ecomm_crawler/: Cargo.toml  results.json
src/server/src/: MyContext.ts  ProductResolver.ts  UserResolver.ts  auth.ts  index.ts  isAuth.ts  productDelete.ts  sendRefreshToken.ts  test.js
vega/: package-lock.json  package.json
vega-backend/: app.js  package-lock.json  package.json
vega-backend/routes/: ecomm_crawler.js  index.js
vega/src/: App.js  SearchBarComp.js  SearchResultComp.js
(+34 files in other folders)
