[package]
name = "ecomm_crawler"
version = "0.1.0"
authors = ["Ben Foley <ben.foley3214@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.11.0", features = ["json", "blocking"] }
select = "0.5.0"
rayon = { version = "*" }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.59"
#mongodb = "1.2.0"
#actix-rt = "1.1.0"
wasm-bindgen = "0.2.71"